[gd_scene load_steps=24 format=2]

[ext_resource path="res://Main/Main.gd" type="Script" id=1]
[ext_resource path="res://Main/Camera.gd" type="Script" id=2]
[ext_resource path="res://Images/deleteIcon.png" type="Texture" id=3]
[ext_resource path="res://Images/addIcon.png" type="Texture" id=4]
[ext_resource path="res://Images/moveIcon.png" type="Texture" id=5]
[ext_resource path="res://Main/FileManager.gd" type="Script" id=6]
[ext_resource path="res://Roboto-Regular.ttf" type="DynamicFontData" id=7]
[ext_resource path="res://Node/GraphNode.tscn" type="PackedScene" id=8]
[ext_resource path="res://Main/PathFinder.gd" type="Script" id=9]
[ext_resource path="res://Main/NodesManager.gd" type="Script" id=10]
[ext_resource path="res://Main/PathsManager.gd" type="Script" id=11]
[ext_resource path="res://Main/UI.gd" type="Script" id=12]
[ext_resource path="res://Main/Output.gd" type="Script" id=13]
[ext_resource path="res://Path/GraphPath.tscn" type="PackedScene" id=14]
[ext_resource path="res://FlatUI.tres" type="Theme" id=15]
[ext_resource path="res://Roboto-Italic.ttf" type="DynamicFontData" id=16]
[ext_resource path="res://Roboto-Bold.ttf" type="DynamicFontData" id=17]

[sub_resource type="StyleBoxEmpty" id=1]

[sub_resource type="StyleBoxEmpty" id=2]

[sub_resource type="DynamicFont" id=3]
font_data = ExtResource( 16 )

[sub_resource type="DynamicFont" id=4]
size = 24
font_data = ExtResource( 17 )

[sub_resource type="DynamicFont" id=5]
font_data = ExtResource( 7 )

[sub_resource type="DynamicFont" id=6]
size = 24
font_data = ExtResource( 7 )

[node name="Main" type="Node2D"]
script = ExtResource( 1 )

[node name="UI" type="CanvasLayer" parent="."]
script = ExtResource( 12 )

[node name="TopPanel" type="Panel" parent="UI"]
anchor_right = 1.0
margin_bottom = 60.0
theme = ExtResource( 15 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Container" type="HBoxContainer" parent="UI/TopPanel"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 10.0
margin_top = 10.0
margin_right = -10.0
margin_bottom = -10.0
__meta__ = {
"_edit_use_anchors_": false,
"_editor_description_": ""
}

[node name="SaveButton" type="Button" parent="UI/TopPanel/Container"]
margin_right = 47.0
margin_bottom = 40.0
text = "Save"

[node name="LoadButton" type="Button" parent="UI/TopPanel/Container"]
margin_left = 51.0
margin_right = 99.0
margin_bottom = 40.0
text = "Load"

[node name="VSeparator" type="VSeparator" parent="UI/TopPanel/Container"]
margin_left = 103.0
margin_right = 167.0
margin_bottom = 40.0
custom_styles/separator = SubResource( 1 )
custom_constants/separation = 64

[node name="NodeEditModesLabel" type="Label" parent="UI/TopPanel/Container"]
margin_left = 171.0
margin_top = 6.0
margin_right = 232.0
margin_bottom = 33.0
text = "Nodes: "

[node name="AddNodeButton" type="Button" parent="UI/TopPanel/Container"]
margin_left = 236.0
margin_right = 276.0
margin_bottom = 40.0
text = "       "

[node name="TextureRect" type="TextureRect" parent="UI/TopPanel/Container/AddNodeButton"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 6.47192
margin_top = 6.0
margin_right = -4.85221
margin_bottom = -6.251
texture = ExtResource( 4 )
expand = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MoveNodeButton" type="Button" parent="UI/TopPanel/Container"]
margin_left = 280.0
margin_right = 320.0
margin_bottom = 40.0
text = "       "

[node name="TextureRect" type="TextureRect" parent="UI/TopPanel/Container/MoveNodeButton"]
modulate = Color( 0, 0, 0, 1 )
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 6.0
margin_top = 6.0
margin_right = -5.32413
margin_bottom = -6.251
texture = ExtResource( 5 )
expand = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="DeleteNodeButton" type="Button" parent="UI/TopPanel/Container"]
margin_left = 324.0
margin_right = 364.0
margin_bottom = 40.0
text = "       "

[node name="TextureRect" type="TextureRect" parent="UI/TopPanel/Container/DeleteNodeButton"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 6.0
margin_top = 6.0
margin_right = -5.32413
margin_bottom = -6.251
texture = ExtResource( 3 )
expand = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="PathEditModesLabel" type="Label" parent="UI/TopPanel/Container"]
margin_left = 368.0
margin_top = 6.0
margin_right = 421.0
margin_bottom = 33.0
text = "Paths:"

[node name="AddPathButton" type="Button" parent="UI/TopPanel/Container"]
margin_left = 425.0
margin_right = 465.0
margin_bottom = 40.0
text = "       "

[node name="TextureRect" type="TextureRect" parent="UI/TopPanel/Container/AddPathButton"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 6.0
margin_top = 6.0
margin_right = -5.32413
margin_bottom = -6.251
texture = ExtResource( 4 )
expand = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="DeletePathButton" type="Button" parent="UI/TopPanel/Container"]
margin_left = 469.0
margin_right = 509.0
margin_bottom = 40.0
text = "       "

[node name="TextureRect" type="TextureRect" parent="UI/TopPanel/Container/DeletePathButton"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 6.0
margin_top = 6.0
margin_right = -5.32413
margin_bottom = -6.251
texture = ExtResource( 3 )
expand = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VSeparator2" type="VSeparator" parent="UI/TopPanel/Container"]
margin_left = 513.0
margin_right = 577.0
margin_bottom = 40.0
custom_styles/separator = SubResource( 2 )
custom_constants/separation = 64

[node name="FromLabel" type="Label" parent="UI/TopPanel/Container"]
margin_left = 581.0
margin_top = 6.0
margin_right = 630.0
margin_bottom = 33.0
text = "From "

[node name="FromNodesChooser" type="OptionButton" parent="UI/TopPanel/Container"]
margin_left = 634.0
margin_right = 662.0
margin_bottom = 40.0
align = 1

[node name="ToLabel" type="Label" parent="UI/TopPanel/Container"]
margin_left = 666.0
margin_top = 6.0
margin_right = 701.0
margin_bottom = 33.0
text = " To "

[node name="ToNodeChooser" type="OptionButton" parent="UI/TopPanel/Container"]
margin_left = 705.0
margin_right = 733.0
margin_bottom = 40.0
align = 1

[node name="UsingLabel" type="Label" parent="UI/TopPanel/Container"]
margin_left = 737.0
margin_top = 6.0
margin_right = 793.0
margin_bottom = 33.0
text = " Using "

[node name="AlgorithimChooser" type="OptionButton" parent="UI/TopPanel/Container"]
margin_left = 797.0
margin_right = 825.0
margin_bottom = 40.0
align = 1

[node name="RunButton" type="Button" parent="UI/TopPanel/Container"]
margin_left = 829.0
margin_right = 869.0
margin_bottom = 40.0
text = "Run"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VSeparator3" type="VSeparator" parent="UI/TopPanel/Container"]
margin_left = 873.0
margin_right = 1208.0
margin_bottom = 40.0
size_flags_horizontal = 3
custom_styles/separator = SubResource( 2 )
custom_constants/separation = 64

[node name="ClearButton" type="Button" parent="UI/TopPanel/Container"]
margin_left = 1212.0
margin_right = 1260.0
margin_bottom = 40.0
text = "Clear"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Output" type="WindowDialog" parent="UI"]
anchor_left = 0.746
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 6.09601
margin_top = 111.0
margin_right = -10.0
margin_bottom = -25.0
popup_exclusive = true
window_title = "Algorithim Output"
resizable = true
script = ExtResource( 13 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="UI/Output"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 15.0
margin_top = 15.0
margin_right = -15.0
margin_bottom = -15.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ControlContainer" type="HBoxContainer" parent="UI/Output/VBoxContainer"]
margin_right = 279.0
margin_bottom = 20.0
size_flags_horizontal = 3
alignment = 1

[node name="RunAll" type="Button" parent="UI/Output/VBoxContainer/ControlContainer"]
margin_left = 41.0
margin_right = 98.0
margin_bottom = 20.0
text = "Run All"

[node name="NextStep" type="Button" parent="UI/Output/VBoxContainer/ControlContainer"]
margin_left = 102.0
margin_right = 176.0
margin_bottom = 20.0
text = "Next Step"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Restart" type="Button" parent="UI/Output/VBoxContainer/ControlContainer"]
margin_left = 180.0
margin_right = 237.0
margin_bottom = 20.0
text = "Restart"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="RichTextLabel" parent="UI/Output/VBoxContainer"]
margin_top = 24.0
margin_right = 279.0
margin_bottom = 554.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_fonts/italics_font = SubResource( 3 )
custom_fonts/bold_font = SubResource( 4 )
custom_fonts/normal_font = SubResource( 5 )
bbcode_enabled = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ModeLabel" type="Label" parent="UI"]
margin_left = 8.01809
margin_top = 68.1371
margin_right = 189.018
margin_bottom = 87.1371
custom_fonts/font = SubResource( 6 )
text = "Active Mode: Create Node"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="LoadFileDialog" type="FileDialog" parent="UI"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 133.0
margin_top = 78.0
margin_right = -132.0
margin_bottom = -78.0
window_title = "Open a File"
mode = 0
access = 2
current_dir = "/SearchAlgorithims"
current_path = "/SearchAlgorithims/"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="SaveFileDialog" type="FileDialog" parent="UI"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 133.0
margin_top = 78.0
margin_right = -132.0
margin_bottom = -78.0
access = 2
current_dir = "/SearchAlgorithims"
current_file = "Graph.txt"
current_path = "/SearchAlgorithims/Graph.txt"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="PathFinder" type="Node" parent="."]
script = ExtResource( 9 )

[node name="FileManager" type="Node" parent="."]
script = ExtResource( 6 )

[node name="Camera" type="Camera2D" parent="."]
position = Vector2( 512.728, 303.246 )
current = true
smoothing_speed = 10.0
script = ExtResource( 2 )

[node name="Paths" type="Node2D" parent="."]
script = ExtResource( 11 )
GraphPathScene = ExtResource( 14 )

[node name="Nodes" type="Node2D" parent="."]
script = ExtResource( 10 )
GraphNodeScene = ExtResource( 8 )

[connection signal="pressed" from="UI/TopPanel/Container/SaveButton" to="." method="_on_SaveButton_pressed"]
[connection signal="pressed" from="UI/TopPanel/Container/LoadButton" to="." method="_on_LoadButton_pressed"]
[connection signal="pressed" from="UI/TopPanel/Container/AddNodeButton" to="." method="update_mode" binds= [ 0, "Create Node" ]]
[connection signal="pressed" from="UI/TopPanel/Container/MoveNodeButton" to="." method="update_mode" binds= [ 1, "Move Node" ]]
[connection signal="pressed" from="UI/TopPanel/Container/DeleteNodeButton" to="." method="update_mode" binds= [ 2, "Delete Node" ]]
[connection signal="pressed" from="UI/TopPanel/Container/AddPathButton" to="." method="update_mode" binds= [ 3, "Delete Node" ]]
[connection signal="pressed" from="UI/TopPanel/Container/DeletePathButton" to="." method="update_mode" binds= [ 4, "Delete Node" ]]
[connection signal="item_selected" from="UI/TopPanel/Container/FromNodesChooser" to="UI" method="_on_FromNodesChooser_item_selected"]
[connection signal="item_selected" from="UI/TopPanel/Container/ToNodeChooser" to="UI" method="_on_ToNodeChooser_item_selected"]
[connection signal="item_selected" from="UI/TopPanel/Container/AlgorithimChooser" to="." method="_on_AlgorithimChooser_item_selected"]
[connection signal="pressed" from="UI/TopPanel/Container/RunButton" to="." method="toggle_running"]
[connection signal="pressed" from="UI/TopPanel/Container/ClearButton" to="." method="_on_ClearButton_pressed"]
[connection signal="popup_hide" from="UI/Output" to="." method="toggle_running"]
[connection signal="pressed" from="UI/Output/VBoxContainer/ControlContainer/RunAll" to="PathFinder" method="pathfind_run"]
[connection signal="pressed" from="UI/Output/VBoxContainer/ControlContainer/NextStep" to="PathFinder" method="pathfind_step"]
[connection signal="pressed" from="UI/Output/VBoxContainer/ControlContainer/Restart" to="PathFinder" method="pathfind_restart"]
[connection signal="file_selected" from="UI/LoadFileDialog" to="." method="_on_LoadFileDialog_file_selected"]
[connection signal="file_selected" from="UI/SaveFileDialog" to="." method="_on_SaveFileDialog_file_selected"]
[connection signal="updated_output_text" from="PathFinder" to="UI/Output" method="_on_PathFinder_updated_output_text"]
